--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,17 @@
     "short_name": "",
     "icons": [
         {
-            "src": "/google-touch-icon.png",
+            "src": "images/android-touch-icon-small.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "images/android-touch-icon-large.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#005FF1",
+    "background_color": "#001417",
     "display": "standalone"
 }
